message YjsCrdtSetCreateMessage {
  required uint32 replicaUniqueNumber = 1;
  required bytes args = 2;
}

message YjsCrdtSetMessage {
  oneof op {
    YjsCrdtSetCreateMessage create = 1;
    string delete = 2;
  }
}

message YjsCrdtSetArgs {
  required string name = 1;
  required bytes args = 2;
}

message YjsCrdtSetSave {
  // In order by time created on this replica.
  repeated YjsCrdtSetArgs constructorArgs = 1;
}
