message CSetMessage {
  oneof op {
    // The AddArgs, serialized.
    bytes add = 1;
    // The name of the value to delete.
    string delete = 2;
  }
}

// OPT: deduplicate senders in names.
message CSetSave {
  // Aligned with names in savedStateTree.children.
  repeated bytes args = 1;
}
